[project]
name = "FlightRadarAPI"
dynamic = ["version"]
description = "SDK for FlightRadar24"
authors = [
    { name = "Jean Loui Bernard Silva de Jesus", email = "jeanextreme002@gmail.com" },
]
license = "MIT"
readme = "README.md"
keywords = ["flightradar24", "api", "radar", "aviation", "flights", "airports", "airlines", "aircraft"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
exclude = ["tests", ".flake8"]
requires-python = ">=3.7"
dependencies = [
  "Brotli",
  "requests",
]

[tool.hatch.build.targets.wheel]
packages = ["FlightRadar24"]

[project.optional-dependencies]
tests = [
  "pytest",
]

[project.urls]
"Homepage" = "https://github.com/JeanExtreme002/FlightRadarAPI"
"Source Code" = "https://github.com/JeanExtreme002/FlightRadarAPI"
"Documentation" = "https://jeanextreme002.github.io/FlightRadarAPI/"
"Bug Reports" = "https://github.com/JeanExtreme002/FlightRadarAPI/issues"

[tool.hatch.version]
path = "FlightRadar24/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
