[project]
name = "FlightRadarAPI"
dynamic = ["version"]
description = "SDK for FlightRadar24"
authors = [
    { name = "Jean Loui Bernard Silva de Jesus", email = "jeanextreme002@gmail.com" },
]
license = "MIT"
readme = "README.md"
keywords = ["flightradar24", "api", "radar", "aviation", "flights", "airports", "airlines", "aircraft"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
  "Brotli",
  "beautifulsoup4",
  "curl_cffi",
]

[tool.hatch.build]
exclude = ["tests", ".flake8"]

[tool.hatch.build.targets.wheel]
packages = ["FlightRadar24"]

[project.optional-dependencies]
tests = [
  "pytest",
]

[project.urls]
"Homepage" = "https://github.com/JeanExtreme002/FlightRadarAPI"
"Source Code" = "https://github.com/JeanExtreme002/FlightRadarAPI"
"Documentation" = "https://jeanextreme002.github.io/FlightRadarAPI/"
"Bug Reports" = "https://github.com/JeanExtreme002/FlightRadarAPI/issues"

[tool.hatch.version]
path = "FlightRadar24/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --disable-warnings --color=yes"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
